--- a/de/webgis-manual/source/_static/css/eni-gray.css
+++ b/de/webgis-manual/source/_static/css/eni-gray.css
@@ -21,3 +21,23 @@ span.caption-text {
   .wy-nav-side {
     background: #ccc;
 }
+
+.wy-table-responsive table td, 
+.wy-table-responsive table th {
+      white-space: normal !important;
+}
+  
+.rst-content section ul {
+      list-style: disc;
+      line-height: 24px;
+      margin-bottom: 24px;
+}
+  
+.rst-content section ul li {
+      list-style: disc;
+      margin-left: 24px;
+}
+  
+.rst-content section ul li p:last-child {
+      margin-bottom: 0;
+}
