--- a/de/webgis-dev/source/_static/css/eni.css
+++ b/de/webgis-dev/source/_static/css/eni.css
@@ -11,3 +11,23 @@
 span.caption-text {
     color: #80C826;
   }
+
+  .wy-table-responsive table td, 
+  .wy-table-responsive table th {
+        white-space: normal !important;
+  }
+    
+  .rst-content section ul {
+        list-style: disc;
+        line-height: 24px;
+        margin-bottom: 24px;
+  }
+    
+  .rst-content section ul li {
+        list-style: disc;
+        margin-left: 24px;
+  }
+    
+  .rst-content section ul li p:last-child {
+        margin-bottom: 0;
+  }
